--- a/index.html
+++ b/index.html
@@ -17,19 +17,35 @@ I am currently a Postdoctoral Scholar working with <a href="https://faculty.wash
 
 </p>
 
-<h1> Current Research </h1>
+<h1> Current Research Projects </h1>
 
 Projects are listed chronologically starting with the most recent. A full list of my work can be seen in the <a href="https://mattgeorgephd.github.io/publications/">Publications</a> section.<br>
-  <br>
-<h4> Unraveling the genomic response of triploid pacific oysters to temperature stress </h4>
 
-<p><i>How does ocean warming affect gene regulation Pacific Oysters (Crassostrea gigas)?</i><br>
+
+<h4> Improved climate resilience in oysters through optimization of hatchery-based environmental conditioning practices </h4>
+<p><b>Funding</b>: USDA Special Research Grants for Aquaculture Research Program (USDA-SRGARP; $325,611) <br>
   <br>
-Shellfish farmers induce triploidy in their oyster seed through a variety of methods, effectively duplicating the genome and preventing the energtic investment in gametes (reproductive tissue). 
-  As a result, triploid oysters grow faster than diploids and put on more 'meat', helping to increase production speed, efficieny, and food quality. 
-  However, little is currently known regarding the effects of genome duplication on the physiological processes that regulate temperature tolerance in invertebrates. 
-  In collaboration with Dr. Steven Roberts (UW) and Dr. Mackenzie Gavery (NOAA), the goal of this project is to generate genome-wide gene expression and DNA methylation datasets from diploid and triploid oysters. 
-  Changes in gene expression and differentially methylated regions among experimental and control groups could indicate an epigenetic gene regulatory response driven by environmental fluctuations. 
+The poor summer performance of oysters is a major constraint for the US aquaculture industry. In collaboration with industry (Taylor Shellfish Co., Nisbet Oyster Co., Pacific Hybreed ) and historically underserved indigenous stakeholders (Jamestown S’Klallam Tribe), we are working to address this problem by developing broodstock husbandry and early-life stage conditioning practices that improve summer survival. Through a series of hatchery experiments, we will deliver optimized hatchery protocols that improve the resilience of oyster seed by leveraging transgenerational and developmental plasticity. These technqiues have the potential to improve oyster seed survival and performance without imposing an additional bottleneck on genetic diversity and without the costs associated with selective breeding programs. Developed protocols will improve the climate resiliency of U.S. oyster stocks, bolster domestic production, and enhance U.S. food security.
+ <br>
+</p>
+
+<h4> Identifying genomic architecture features that contribute to critical phenotypes in shellfish </h4>
+<p><b>Funding</b>: USDA National Animal Genome Research Program (USDA NRSP-8; $10,000) <br>
+
+The ability to identify genomic predictors of phenotype offer a framework to increase aquaculture production, namely through the identification of the genetic underpinnings stress tolerance. In this project, we are working to characterize genomic architecture variation by evaluating ribosomal DNA (rDNA) copy number variation. This genomic feature has received limited attention, however rDNA encodes for ribosome biogenesis, one of the most central processes in cellular biology from a functional perspective because of its close connections to growth, development, and metabolism. rDNA is an emerging genomic determinant of phenotype, with respect to both sequence and copy number variation. Using WGS, we are currently characterizing rDNA copy number variation while also assessing variability across other features including transposable elements, another feature with characteristics that have correlations with phenotype in marine invertebrates. This project will advance genome-to-phenome
+prediction by implementing strategies and tools to identify and validate genes and allelic variants predictive of biologically and economically important phenotypes and traits.  <br>
+</p>
+
+<h4> Development of genomic markers for environmental resilience in mussels </h4>
+<p><b>Funding</b>: Pacific States Marine Fisheries Commission Pilot Program (PSMFC; $124,980)<br>
+  <br>
+Mussel aquaculture production faces an unprecedented challenge as climate change continues to increase the environmental variability within our oceans. To effectively select and cultivate genetic stocks that are resilient to global processes such as ocean acidification (OA) and ocean warming (OW), research that describes the genomic diversity present in farmed and wild mussel populations is needed. To accomplish this goal, we have assembled an interdisciplinary team with expertise in ecological physiology, genetics, and material science to identify the downstream effects of stress-induced changes in gene expression on the ability of marine mussels to attach to aquaculture lines. We anticipate to be able identify several biological pathways whose stress-induced dysregulation result in reproducible changes in the composition, structure, and performance of byssal threads, the protein-based fibers mussels use to adhere to surfaces underwater. In collaboration with our industry partner, Penn Cove Shellfish LLC, the measure of success for this proposal will be the identification of genetic markers that, when used as selection criteria for mussel broodstock, will produce adults with robust attachment to aquaculture lines under near-future OA and OW. By defining these gene-environment interactions, our results stand to support commercial growers in the development of selective breeding programs to ensure the efficient, sustainable, and profitable production of mussels within the United States. <br>
+</p>
+
+<h4> The impact of polyploidy on stress tolereance and surivival during marine heatwaves in Pacific oysters</h4>
+<p><b>Funding:</b> NOAA National Oceanographic Partnership Program (NOPP; $233,135) <br>
+  <br>
+Shellfish farmers induce triploidy in their oyster seed through a variety of methods, effectively duplicating the genome and preventing the energtic investment in gametes (reproductive tissue). As a result, triploid oysters grow faster than diploids and put on more 'meat', helping to increase production speed, efficieny, and food quality. However, little is currently known regarding the effects of genome duplication on the physiological processes that regulate temperature tolerance in invertebrates. In collaboration with Dr. Steven Roberts (UW) and Dr. Mackenzie Gavery (NOAA), the goal of this project is to generate genome-wide gene expression and DNA methylation datasets from diploid and triploid oysters. Changes in gene expression and differentially methylated regions among experimental and control groups could indicate an epigenetic gene regulatory response driven by environmental fluctuations.
   These results provide insight into regulatory regions sensitive to methylation modification that underlie important physiological responses to environmental change, and add could result in genomic criteria for family selection during future oyster production. <br>
 </p>
 
