--- a/index.html
+++ b/index.html
@@ -121,13 +121,15 @@ Office:<br>
 &nbsp;&nbsp;&nbsp;University of Washington<br>
 &nbsp;&nbsp;&nbsp;School of Aquatic and Fishery Sciences<br>
 &nbsp;&nbsp;&nbsp;1122 NE Boat Street, FTR 234 <br>
-&nbsp;&nbsp;&nbsp;Seattle, WA 98105, USA <br>
+&nbsp;&nbsp;&nbsp;Seattle, WA 98195, USA <br>
 </p>
 
 <p>
 Mailing address:<br>
 &nbsp;&nbsp;&nbsp;Matthew George<br>
 &nbsp;&nbsp;&nbsp;University of Washington<br>
-&nbsp;&nbsp;&nbsp;1122 NE Boat Street Room 116 <br>
-&nbsp;&nbsp;&nbsp;Seattle, WA 98105, USA <br>
+&nbsp;&nbsp;&nbsp;School of Aquatic and Fishery Sciences<br>
+&nbsp;&nbsp;&nbsp;1122 NE Boat Street <br>
+&nbsp;&nbsp;&nbsp;Box 355020 <br>
+&nbsp;&nbsp;&nbsp;Seattle, WA 98195, USA <br>
 </p>
