--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ subtitle: Biologist and Data Scientist
   <br>
 I am a proponent for open science and use an <a href="https://mattgeorgephd.github.io/notebook/">open access online lab notebook</a> as well as <a href="https://github.com/mattgeorgephd">GitHub</a> to publicly share my research and support reproducibility. <br>
   <br>
-I am currently a Postdoctoral Scholar working with <a href="https://faculty.washington.edu/sr320/">Dr. Steven Roberts</a> in the <a href="https://fish.uw.edu/">School of Aquatic and Fishery Sciences</a> at the University of Washington and Dr. Mackenzie Gavery at the <a href="https://www.fisheries.noaa.gov/about/northwest-fisheries-science-center">NOAA Northwest Fisheries Science Center</a> in Seattle Washington. <br>
+I am currently a Research Scientist working with <a href="https://faculty.washington.edu/sr320/">Dr. Steven Roberts</a> in the <a href="https://fish.uw.edu/">School of Aquatic and Fishery Sciences</a> at the University of Washington and Dr. Mackenzie Gavery at the <a href="https://www.fisheries.noaa.gov/about/northwest-fisheries-science-center">NOAA Northwest Fisheries Science Center</a> in Seattle Washington. <br>
 
 </p>
 
