--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Matt George
-subtitle: Biologist and Data Scientist
+title: Henry Berg
+subtitle:
 ---
 
 <meta property="og:image" content="{{ post.thumbnail }}">
@@ -9,7 +9,7 @@ subtitle: Biologist and Data Scientist
 
 <h1> My Interests </h1>
 
-<p>I am interested in understanding how species respond to environmental change. Certain environmental conditions are beneficial while others are harmful to animals. Trying to understand what species will be tolerant or intolerant to particular environmental conditions is crucial for effective species management and environmental regulations in the face of climate change. <br>
+<!--<p>I am interested in understanding how species respond to environmental change. Certain environmental conditions are beneficial while others are harmful to animals. Trying to understand what species will be tolerant or intolerant to particular environmental conditions is crucial for effective species management and environmental regulations in the face of climate change. <br>
   <br>
 I am a proponent for open science and use an <a href="https://mattgeorgephd.github.io/notebook/">open access online lab notebook</a> as well as <a href="https://github.com/mattgeorgephd">GitHub</a> to publicly share my research and support reproducibility. <br>
   <br>
@@ -109,18 +109,18 @@ Shellfish farmers induce triploidy in their oyster seed through a variety of met
 <h1> Contact </h1>
 
 <p>Email:<br>
-&nbsp;&nbsp;&nbsp;<a href="mailto:mngeorge@uw.edu">mngeorge [at] uw [dot] edu</a>
+&nbsp;&nbsp;&nbsp;<a href="mailto:hberg@uw.edu">hberg [at] uw [dot] edu</a>
 </p>
 
-<p>
+<!--<p>
 Office:<br>
 &nbsp;&nbsp;&nbsp;University of Washington<br>
 &nbsp;&nbsp;&nbsp;School of Aquatic and Fishery Sciences<br>
 &nbsp;&nbsp;&nbsp;1122 NE Boat Street, FTR 234 <br>
 &nbsp;&nbsp;&nbsp;Seattle, WA 98195, USA <br>
-</p>
+</p>-->
 
-<p>
+<!--<p>
 Mailing address:<br>
 &nbsp;&nbsp;&nbsp;Matthew George<br>
 &nbsp;&nbsp;&nbsp;University of Washington<br>
@@ -128,4 +128,4 @@ Mailing address:<br>
 &nbsp;&nbsp;&nbsp;1122 NE Boat Street <br>
 &nbsp;&nbsp;&nbsp;Box 355020 <br>
 &nbsp;&nbsp;&nbsp;Seattle, WA 98195, USA <br>
-</p>
+</p>-->
