Add subtitle in about section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Henry Berg
-subtitle:
+subtitle: Undergraduate Researcher, University of Washington School of Aquatics & Fisheries Science 
 ---
 
 <meta property="og:image" content="{{ post.thumbnail }}">
